Fix linting and formatting

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,39 +1,77 @@
 unique_ids:
-  forms: {landing.select_action_report.report_row: LYU64FVCC4GNEVN7M7BWM4TIQYEZK3J3,
-    form.widgets.date: YHGU6SPE725HDJJUCWYYWKQPAUH33643, build.widgets.markdown: KMLWBKK7QTE3JSKEKNWBNYEHWLVEUEHY,
-    reports.widgets.widget_utilities.markdown_display: PUM6ITVYWJRXOVZS3F7P4O5KWBNVCC7V,
-    build.widgets.widget_utilities.markdown_display: R5SI5L4HJ53O2HBA7FJUSWG5QSC55EME,
-    reports.widgets.toolbar: 4FUMTG7WEXK5TVJOZBZ7SOS6BFW6GH2A, build.widgets.check_box: KNLAEBUNFZXKIAEZQWQ4Z4NJJRIXA74D,
-    form.widgets.radio_button: BWN4CJ7VVZ3O2BHPAYNHCVIQH6UIBSIV, reports.widgets.widget_utilities.vega_lite: 5ZJ7XFZDI4UX6Q4DFT6IMY77JA4YVLID,
-    form.widgets.drop_down: QJC7F4I75NMX7JEVF67DMEIZWQLYOPMG, form.main: GE2VPJW5WMALLJHE4KPPYN7XQENAYGJT,
-    form.widgets.markdown: 7PJP4OBPVFWXSHAR4NFHIFSFWF4AE7ES, reports.main: 4WXPSTTNU2W2LG5TSW4YK5FGGCFTKFUY,
-    build.widgets.section: GJEERO26R74M4I3W4FKATOB5NTGOQO3F, reports.edit_templates.edit_templates_templ: WHUTYOVQG44ZJN5BIWZ3KEVGRYK7SQE2,
-    build.widgets.text_area: 4M34LRJDBJRC5EGHXWNI5XEZADFIEWUN, reports.widgets.section: GJTDKQO344ZZ5KQOEI4J3JBQ5IJA4FGI,
-    form.widgets.text_area: WHF36O772DU4LOXLWEUZ2PIUGL6HTHWS, reports.widgets.widget_utilities.read_only_json: SZ5VH3RZW5XXIDATHAOVEIBUTIQWEJRU,
-    form.widgets.check_box.check_box_other: 2UVSINP5E7OPWHHQKD5RDXKDM2DAVXU5, build.main: UJGJQEWYJAYQMZUIKL6JHDCII3QRURHU,
-    landing.main: IU7UUK6I6LF74JD4CHRC4RQWVBHJVRNI, reports.edit_templatesUNUSED: 3T3NXPF3PB2LF4USW2BQR5AGOZSX76O5,
-    form.widgets.section: JU45GZITMUQJ4T3VE6OIZ2HQL47EQFPQ, reports.edit_templates: 23JLF4MWZYPZVLLLRS5I7IYO7PZQHX67,
-    build.widgets.slider: UNJRXDDO6YVVUKMA6VGZPCJ2MKRS47DN, landing.select_action_survey.survey_row: DYQ2UV7UO2FZ5723BFVYJSLNSLEEZTIY,
-    landing.select_action_survey: YWMES4G6WTGISZPUFCBAE55UGTEJF3U4, utilities.hr: EQ7PSKTYCTYRVE5FLXIJPPI56R2NLKOZ,
-    landing.copy_link: TEWZ4B4EOQU4FKV3KO3Y7FMDLUAOTJNK, build.widgets.drop_down: RKWHKZBTSKNMZNHFRBD5TRHHBEYJUTAD,
-    build.widgets.radio_button: ADA4HYYRH7YPYP5EBOC2OS2CSUM4ZXEW, reports.widgets.markdown: R33NSEVCQZMRPJGYXX4AHCMFIOA2DN3C,
-    reports.widgets.widget_utilities.gen_chart_params: BNPM6IFXL6KGI2RP6COZCIXEH6QIFNYA,
-    reports.widgets.chart: CAG5LN3HJBZAPHPESDCV5LOH6GZXRKQS, build.branch.confirm_content: XIDJNFXI5MNP6OKHGKJDXPHCUPUY3WLM,
-    form.widgets.slider: NTXNQXWL6X5QRPYBBNRN62Q652FZZ6LB, form.widgets.widget_utilities.slider_custom: FBZ5QGYBOA42FHMCSUA4HLKZSBL2L2FT,
-    landing.select_action_report: W74XM7L3XZLT7HFMJMYXPAPFKY4XDDCK, reports.widgets.widget_utilities.data_info_view_old: 2RSWE6O5SEKYQTLQ4IYGIHAQV7MFSLGG,
-    build.widgets.text_box: PXBTHNN32CXFAXIPC2XX3HFEUK4APSQG, reports.widgets.widget_utilities.json: 2UGB6VYJ4XY3YOCXANDIT5KXGYDNZG7E,
-    form.widgets.html_display: 3EALUEBOGB4BT6UW6F42XV4PIXW5HAVA, form.thank_you_msg: 7M55BNOGOZ5EDYVBZKRITBGBPLY3V67K,
-    form.widgets.text_box: MMAGKPRCUWMQKGAAR7MTFJPJPPVELXBN, form.widgets.check_box: ZSGR7DG7WZNYEJQ4SX4YUPBYWRITP4LS,
-    landing.settings.survey_settings: M2CM7UCPT3GJAW33BAWYYTWVAM3M46D5, build.widgets.toolbar: ISOFURDP6Q5FZNXDTDFJ3F7H6EQLNH6C,
-    reports.widgets.widget_utilities.data_info_view: JWRVMQJEKJRJUDJ3DM4OBWNX5MKG75GS,
-    landing.settings.report_settings: ELRSUXEDSGSN44SFCPHWNEFBMOYSSMQ6, build.widgets.date: YWDYSQDW6KXU6EGVPUF2SDLV6SA55K3L}
-  modules: {build.widgets.widget_utilities: XZ5TCIXTRF3HKTGJMJNUV4JVDHKOXK3Z, landing.settings: TEGSALPKJDY62VKFI5W3CIPI5FTO3HSG,
-    reports.widgets: PWE7LGOMJLAZ6QV65SHWNKYVT7TIJSSS, utilities.augment: GDMKGB5ZY2HI7MGVTBCNMEWKQCD4EO7X,
-    start_up: RYAY3JNUNNKIQ5T5SIUHLNCOAQSLILGX, utilities: EL7DBISDGVGMEN6PDA33EC7WJD66GCR3,
-    form.widgets.widget_utilities: RMPSCITOJTECVYHYCNMUMM5WJ3LNYPBV, reports: JAELIS3GTLWNTY4IUEXDXGCU56UIYSM6,
-    form: XWU6Z4HAX5MJLQUVHJPYRPWDLOUOR6JP, reports.widgets.widget_utilities: WWPS4F6DAIKMRWDFEMSZNJHO45W6D65N,
-    build.widgets: A4E6YA4R7VMAPLVHGJ6BCFJVJEQRJ3J7, landing.settings.ColorChanger: X3ZMQR7LEUEKF6C24V3QJKJJ4B7ICBVP,
-    build: 2AL7MAP4R4S2XKCPDN6AWSF3YGM3HAJE, form.widgets: WOD7TQ7GVVUXUVFR6CFLTS6QTC6VRD7X,
-    build.branch: 2HW6FLH7OQ4TO3RSKQSAE5GCPLAQOTO6, landing: 6SOSO3VGIZXWMZ2SQTKKB7YMNH7LY4QQ}
-  server_modules: {server_reports: EAKKZZNXW7JGRHGQIGAOS6MP46NHDRNF, server_surveys: E7ED5V3AIMOKY47XR6PDKDEMJLCLOABX}
-  assets: {standard-page.html: YQT44RRI6GRDFH3NFFTKWKBQK2IGR57N, theme.css: HDDQUOZEJYERG4KEW32X34Q4II647WY7}
+  forms:
+    landing.select_action_report.report_row: LYU64FVCC4GNEVN7M7BWM4TIQYEZK3J3
+    form.widgets.date: YHGU6SPE725HDJJUCWYYWKQPAUH33643
+    build.widgets.markdown: KMLWBKK7QTE3JSKEKNWBNYEHWLVEUEHY
+    reports.widgets.widget_utilities.markdown_display: PUM6ITVYWJRXOVZS3F7P4O5KWBNVCC7V
+    build.widgets.widget_utilities.markdown_display: R5SI5L4HJ53O2HBA7FJUSWG5QSC55EME
+    reports.widgets.toolbar: 4FUMTG7WEXK5TVJOZBZ7SOS6BFW6GH2A
+    build.widgets.check_box: KNLAEBUNFZXKIAEZQWQ4Z4NJJRIXA74D
+    form.widgets.radio_button: BWN4CJ7VVZ3O2BHPAYNHCVIQH6UIBSIV
+    reports.widgets.widget_utilities.vega_lite: 5ZJ7XFZDI4UX6Q4DFT6IMY77JA4YVLID
+    form.widgets.drop_down: QJC7F4I75NMX7JEVF67DMEIZWQLYOPMG
+    form.main: GE2VPJW5WMALLJHE4KPPYN7XQENAYGJT
+    form.widgets.markdown: 7PJP4OBPVFWXSHAR4NFHIFSFWF4AE7ES
+    reports.main: 4WXPSTTNU2W2LG5TSW4YK5FGGCFTKFUY
+    build.widgets.section: GJEERO26R74M4I3W4FKATOB5NTGOQO3F
+    reports.edit_templates.edit_templates_templ: WHUTYOVQG44ZJN5BIWZ3KEVGRYK7SQE2
+    build.widgets.text_area: 4M34LRJDBJRC5EGHXWNI5XEZADFIEWUN
+    reports.widgets.section: GJTDKQO344ZZ5KQOEI4J3JBQ5IJA4FGI
+    form.widgets.text_area: WHF36O772DU4LOXLWEUZ2PIUGL6HTHWS
+    reports.widgets.widget_utilities.read_only_json: SZ5VH3RZW5XXIDATHAOVEIBUTIQWEJRU
+    form.widgets.check_box.check_box_other: 2UVSINP5E7OPWHHQKD5RDXKDM2DAVXU5
+    build.main: UJGJQEWYJAYQMZUIKL6JHDCII3QRURHU
+    landing.main: IU7UUK6I6LF74JD4CHRC4RQWVBHJVRNI
+    reports.edit_templatesUNUSED: 3T3NXPF3PB2LF4USW2BQR5AGOZSX76O5
+    form.widgets.section: JU45GZITMUQJ4T3VE6OIZ2HQL47EQFPQ
+    reports.edit_templates: 23JLF4MWZYPZVLLLRS5I7IYO7PZQHX67
+    build.widgets.slider: UNJRXDDO6YVVUKMA6VGZPCJ2MKRS47DN
+    landing.select_action_survey.survey_row: DYQ2UV7UO2FZ5723BFVYJSLNSLEEZTIY
+    landing.select_action_survey: YWMES4G6WTGISZPUFCBAE55UGTEJF3U4
+    utilities.hr: EQ7PSKTYCTYRVE5FLXIJPPI56R2NLKOZ
+    landing.copy_link: TEWZ4B4EOQU4FKV3KO3Y7FMDLUAOTJNK
+    build.widgets.drop_down: RKWHKZBTSKNMZNHFRBD5TRHHBEYJUTAD
+    build.widgets.radio_button: ADA4HYYRH7YPYP5EBOC2OS2CSUM4ZXEW
+    reports.widgets.markdown: R33NSEVCQZMRPJGYXX4AHCMFIOA2DN3C
+    reports.widgets.widget_utilities.gen_chart_params: BNPM6IFXL6KGI2RP6COZCIXEH6QIFNYA
+    reports.widgets.chart: CAG5LN3HJBZAPHPESDCV5LOH6GZXRKQS
+    build.branch.confirm_content: XIDJNFXI5MNP6OKHGKJDXPHCUPUY3WLM
+    form.widgets.slider: NTXNQXWL6X5QRPYBBNRN62Q652FZZ6LB
+    form.widgets.widget_utilities.slider_custom: FBZ5QGYBOA42FHMCSUA4HLKZSBL2L2FT
+    landing.select_action_report: W74XM7L3XZLT7HFMJMYXPAPFKY4XDDCK
+    reports.widgets.widget_utilities.data_info_view_old: 2RSWE6O5SEKYQTLQ4IYGIHAQV7MFSLGG
+    build.widgets.text_box: PXBTHNN32CXFAXIPC2XX3HFEUK4APSQG
+    reports.widgets.widget_utilities.json: 2UGB6VYJ4XY3YOCXANDIT5KXGYDNZG7E
+    form.widgets.html_display: 3EALUEBOGB4BT6UW6F42XV4PIXW5HAVA
+    form.thank_you_msg: 7M55BNOGOZ5EDYVBZKRITBGBPLY3V67K
+    form.widgets.text_box: MMAGKPRCUWMQKGAAR7MTFJPJPPVELXBN
+    form.widgets.check_box: ZSGR7DG7WZNYEJQ4SX4YUPBYWRITP4LS
+    landing.settings.survey_settings: M2CM7UCPT3GJAW33BAWYYTWVAM3M46D5
+    build.widgets.toolbar: ISOFURDP6Q5FZNXDTDFJ3F7H6EQLNH6C
+    reports.widgets.widget_utilities.data_info_view: JWRVMQJEKJRJUDJ3DM4OBWNX5MKG75GS
+    landing.settings.report_settings: ELRSUXEDSGSN44SFCPHWNEFBMOYSSMQ6
+    build.widgets.date: YWDYSQDW6KXU6EGVPUF2SDLV6SA55K3L
+  modules:
+    build.widgets.widget_utilities: XZ5TCIXTRF3HKTGJMJNUV4JVDHKOXK3Z
+    landing.settings: TEGSALPKJDY62VKFI5W3CIPI5FTO3HSG
+    reports.widgets: PWE7LGOMJLAZ6QV65SHWNKYVT7TIJSSS
+    utilities.augment: GDMKGB5ZY2HI7MGVTBCNMEWKQCD4EO7X
+    start_up: RYAY3JNUNNKIQ5T5SIUHLNCOAQSLILGX
+    utilities: EL7DBISDGVGMEN6PDA33EC7WJD66GCR3
+    form.widgets.widget_utilities: RMPSCITOJTECVYHYCNMUMM5WJ3LNYPBV
+    reports: JAELIS3GTLWNTY4IUEXDXGCU56UIYSM6
+    form: XWU6Z4HAX5MJLQUVHJPYRPWDLOUOR6JP
+    reports.widgets.widget_utilities: WWPS4F6DAIKMRWDFEMSZNJHO45W6D65N
+    build.widgets: A4E6YA4R7VMAPLVHGJ6BCFJVJEQRJ3J7
+    landing.settings.ColorChanger: X3ZMQR7LEUEKF6C24V3QJKJJ4B7ICBVP
+    build: 2AL7MAP4R4S2XKCPDN6AWSF3YGM3HAJE
+    form.widgets: WOD7TQ7GVVUXUVFR6CFLTS6QTC6VRD7X
+    build.branch: 2HW6FLH7OQ4TO3RSKQSAE5GCPLAQOTO6
+    landing: 6SOSO3VGIZXWMZ2SQTKKB7YMNH7LY4QQ
+  server_modules:
+    __init__: 5GXK24RRWE4YEMPW57JKHHSTPNYY6G6E
+    server_reports: EAKKZZNXW7JGRHGQIGAOS6MP46NHDRNF
+    server_surveys: E7ED5V3AIMOKY47XR6PDKDEMJLCLOABX
+  assets:
+    standard-page.html: YQT44RRI6GRDFH3NFFTKWKBQK2IGR57N
+    theme.css: HDDQUOZEJYERG4KEW32X34Q4II647WY7
